force-app/main/default/objects/Driver__c/fields/Driver_Id__c.field-meta.xml
<CustomField>
    <fullName>Driver_Id__c</fullName>
    <displayFormat>DR{000}</displayFormat>
    <label>Driver Id</label>
    <type>AutoNumber</type>
</CustomField>