force-app/main/default/objects/Driver__c/fields/Permanant__c.field-meta.xml
<CustomField>
    <fullName>Permanant__c</fullName>
    <label>Permanent Address</label>
    <type>TextArea</type>
</CustomField>