force-app/main/default/objects/Driver__c/validationRules/Contacrt_Dates_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contacrt_Dates_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Contract_Start_Date__c &gt; Contract_End_Date__c</errorConditionFormula>
    <errorMessage>Contract Start Date cannot be greater than Contract End Date</errorMessage>
</ValidationRule>